css/gdiu_main.css
/*
    GDIU Branding Info
    Fonts
       Title : GN Kill Gothic U
       Header: Arial Rounded MT Bold
       Body  : Calibri
    Colors
       Red   : #DD5445
       Green : #60BB92
       Blue  : #5978BB
       Yellow: #FEC366
       White : #EAEAEA
       Grey  : #6E6D71
       Black : #222D2F
*/

@font-face {
    font-family: 'GN Kill Gothic U';
    src: url('resources/GN-KillGothic-U-KanaNB.ttf');
}

html {
    margin: 0;
    padding: 0;
}

body {
    font-family: Calibri, Arial, Helvetica, sans-serif;
    color: #222d2f;
    font-size: 1.5rem;
    background-color: #eaeaea;
    margin: 0;
    padding: 0;
}

h1 {
    font-family: 'GN Kill Gothic U';
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 4rem;
    margin: 0 0 -0.2em 0;
}

h2, h3, h4 {
    font-family: 'Arial Rounded MT';
    margin: 0;
}

a {
    text-decoration: none;
    color: #6e6d71;
}

    a:hover {
        color: #dd5445;
    }

i {
    margin-right: 0.2em;
}

#wrapper {
    height: 100vh;
    margin-bottom: -1.5em;
    display: flex;
    flex-direction: column;
}

    #wrapper:after {
        content: '';
        display: block;
        height: 1.5em;
    }

#top-nav {
    display: flex;
    align-items: flex-start;
    max-width: 1200px;
    padding: 0.5em;
    margin: auto;
    margin-bottom: -1em;
    position: relative;
    z-index: 1;
}

    #top-nav .site-icon {
        display: block;
        height: 10em;
        position: relative;
        z-index: 3;
        margin: -6em 1em -12em 0em;
    }

#page-frame {
    border: none;
    outline: none;
    width: 100vw;
}

.flex-grow {
    flex-grow: 1;
}

.fixed {
    position: fixed;
}

.center {
    margin: auto;
}

.content {
    color: #222d2f;
}

/* Shapes and whatnot */
.circle {
    border-radius: 9999px;
    display: block;
    height: 1em;
    width: 1em;
    padding: 0.4em 0.4em 0.6em 0.6em;
    text-align: center;
}

.squircle {
    border-radius: 9999px;
    display: block;
    padding: 0.5em 1em;
    text-align: center;
}

.full-bar {
    height: 1.5em;
    width: 100%;
    position: relative;
    z-index: 1;
}

.square {
    height: 0;
    padding-top: 100% !important;
}

.solid-red {
    background-color: #dd5445;
    color: #eaeaea;
}

.solid-green {
    background-color: #60bb92;
    color: #eaeaea;
}

.solid-blue {
    background-color: #5978bb;
    color: #eaeaea;
}

.solid-yellow {
    background-color: #f3b852;
    color: #eaeaea;
}

.outline {
    border: 3px solid #222d2f;
}

.white-outline {
    border: 3px solid #eaeaea;
}

.thick {
    border-width: 6px;
}

.red {
    color: #dd5445;
    background-color: #eaeaea;
}

    .red.outline, .solid-red.outline {
        border-color: #dd5445;
    }

.green {
    color: #60bb92;
    background-color: #eaeaea;
}

    .green.outline, .solid-green.outline {
        border-color: #60bb92;
    }

.blue {
    color: #5978bb;
    background-color: #eaeaea;
}

    .blue.outline, .solid-blue.outline {
        border-color: #5978bb;
    }

.yellow {
    color: #f3b852;
    background-color: #eaeaea;
}

    .yellow.outline, .solid-yellow.outline {
        border-color: #f3b852
    }

.button {
    transition: all 0.1s ease-out;
}

a.button {
    text-decoration: none;
}

.button.solid-red {
    border: 3px solid #eaeaea;
}

    .button.solid-red.outline {
        border-color: #dd5445;
    }

    .button.solid-red:hover {
        border-color: #dd5445;
        background-color: #eaeaea;
        color: #dd5445;
    }

    .button.solid-red:active {
        border-color: #dd5445;
        background-color: #dd5445;
        color: #eaeaea;
    }

.button.solid-green {
    border: 3px solid #eaeaea;
}

    .button.solid-green.outline {
        border-color: #60bb92;
    }

    .button.solid-green:hover {
        border-color: #60bb92;
        background-color: #eaeaea;
        color: #60bb92;
    }

    .button.solid-green:active {
        border-color: #60bb92;
        background-color: #60bb92;
        color: #eaeaea;
    }

.button.solid-blue {
    border: 3px solid #eaeaea;
}

    .button.solid-blue.outline {
        border-color: #5978bb;
    }

    .button.solid-blue:hover {
        border-color: #5978bb;
        background-color: #eaeaea;
        color: #5978bb;
    }

    .button.solid-blue:active {
        border-color: #5978bb;
        background-color: #5978bb;
        color: #eaeaea;
    }

.button.solid-yellow {
    border: 3px solid #eaeaea;
}

    .button.solid-yellow.outline {
        border-color: #f3b852;
    }

    .button.solid-yellow:hover {
        border-color: #f3b852;
        background-color: #eaeaea;
        color: #fec366;
    }

    .button.solid-yellow:active {
        border-color: #f3b852;
        background-color: #f3b852;
        color: #eaeaea;
    }

.button.red {
    border: 3px solid #dd5445;
}

    .button.red:hover {
        border-color: #eaeaea;
        color: #eaeaea;
        background-color: #dd5445;
    }

    .button.red:active {
        color: #dd5445;
        background-color: #eaeaea;
    }

.button.green {
    border: 3px solid #60bb92;
}

    .button.green:hover {
        border-color: #eaeaea;
        color: #eaeaea;
        background-color: #60bb92;
    }

    .button.green:active {
        color: #60bb92;
        background-color: #eaeaea;
    }

.button.blue {
    border: 3px solid #5978bb;
}

    .button.blue:hover {
        border-color: #eaeaea;
        color: #eaeaea;
        background-color: #5978bb;
    }

    .button.blue:active {
        color: #5978bb;
        background-color: #eaeaea;
    }

.button.yellow {
    border: 3px solid #f3b852;
}

    .button.yellow:hover {
        border-color: #eaeaea;
        color: #eaeaea;
        background-color: #fec366;
    }

    .button.yellow:active {
        color: #f3b852;
        background-color: #eaeaea;
    }

